Created Trail System, added JSON data saving. Added Specific permissions for every trail.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: UltimateParticles
-version: '${project.version}'
+version: 1.0.0
 main: me.whiood.ultimateparticles.UltimateParticles
 api-version: 1.19
 authors: [ Whiood ]
